--- a/package.json
+++ b/package.json
@@ -16,11 +16,20 @@
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
+    "@orpc/client": "next",
+    "@orpc/json-schema": "next",
+    "@orpc/openapi": "next",
+    "@orpc/react": "next",
+    "@orpc/server": "next",
+    "@orpc/tanstack-query": "next",
+    "@orpc/zod": "next",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/react-query": "^5.85.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
