feat: init ai chat routes and related envs

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^2.0.14",
+    "@ai-sdk/react": "^2.0.22",
+    "@t3-oss/env-nextjs": "^0.13.8",
+    "ai": "^5.0.22",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.541.0",
